# spotify-web-server

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: account.rs  app_store.rs  cmd.rs  errors.rs  lib.rs  main.rs  routes.rs  session.rs
src/account/: mod.rs  utils.rs
src/common/: crypto.rs  hex.rs  mod.rs  retry.rs
src/endpoints/: albums.rs  artists.rs  audios.rs  categories.rs  episodes.rs  genres.rs  health_check.rs  login.rs  markets.rs  mod.rs  params.rs  playlists.rs  recommends.rs  search.rs  shows.rs  tracks.rs  users.rs
src/routes/: albums.rs  artists.rs  audios.rs  auth.rs  episodes.rs  login.rs  mod.rs  search.rs  shows.rs  tracks.rs  utils.rs
