[package]
name = "spotify-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "spotify_web_server"
path = "src/lib.rs"

[[bin]]
name = "spotify-web-server"
path = "src/main.rs"

[dependencies]
# Async
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "process", "time"] }
tokio-stream = "0.1"
async-stream = "0.3"
actix-web = { version = "4", features = ["secure-cookies"] }
actix-session = { version = "0.7", features = ["cookie-session"] }

# Spotify Api
librespot = { version = "0.4", default-features = false }
rspotify = "0.11"

rand = "0.8"
chrono = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1"
anyhow = "1"
percent-encoding = "2"
url = "2"
toml = "0.7"
clap = { version = "4", features = ["derive", "cargo"] }

# Crypto
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
sha2 = "0.10"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["default", "local-time", "registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-appender = "0.2"
tracing-actix-web = "0.7"
